[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mac-use"
version = "0.1.0"
description = "Mac automation and streamlit interface tools"
authors = [
    {name = "Hanzo Team"}
]
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "streamlit>=1.38.0",
    "anthropic[bedrock,vertex]>=0.37.1",
    "jsonschema==4.22.0",
    "keyboard>=0.13.5",
    "boto3>=1.28.57",
    "google-auth<3,>=2",
    "python-dotenv>=1.0.1",
    # Avoid problematic packages
    "watchdog>=5.0.3"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools]
packages = ["mac_use", "mac_use.tools"]

[project.scripts]
mac-use = "mac_use.streamlit:cli"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false